--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@ footer a {
 }
 
 .sidebar {
-  background-color: #090b10;
+  background-color: #0d1117;
   padding: 16px;
   color: #fff;
   display: flex;
@@ -191,10 +191,23 @@ footer a {
 }
 
 .output {
-  height: 272px;
+  height: 296px;
   padding-left: 4px;
+  background-color: #0d1117;
 }
 
+textarea {
+  width: 100%;
+  background-color: #0d1117;
+  height: 300px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 12px;
+  border: 0px solid #ccc;
+  border-radius: px;
+  resize: none;
+  outline: none;
+}
 .btnRun {
   width: 120px;
   height: 40px;
@@ -398,7 +411,7 @@ footer a {
 .Sidebar {
   width: 200px;
   background-color: #090b10;
-  height: calc(100vh - 68px);
+  /* height: calc(100vh - 68px); */
 }
 .Editor-Bottom {
   display: flex;
@@ -420,11 +433,11 @@ footer a {
 
 .RealTimeEditor {
   width: calc(72vw - 200px);
-  height: calc(100vh - 68px);
+  /* height: calc(100vh - 200px); */
 }
 
 .CodeMirror {
-  min-height: calc(100vh - 68px);
+  min-height: 85vh;
   font-size: 14px;
   line-height: 1.1;
   z-index: 2;
@@ -432,7 +445,7 @@ footer a {
 
 .Output {
   flex: 1;
-  border: 0.4px solid #222;
+  border: 0.2px solid #222;
   overflow: hidden;
   box-sizing: border-box;
   background-color: #0d1117;
@@ -452,6 +465,7 @@ footer a {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  background-color: #090b10;
 }
 
 @media (max-width: 480px) {
@@ -463,7 +477,7 @@ footer a {
   }
   .RealTimeEditor {
     width: calc(100vw);
-    height: calc(100vh - 68px);
+    /* height: 800px; */
   }
   .Header {
     height: fit-content;
