--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ body {
   position: relative;
 }
 .css-1knaqv7-MuiButtonBase-root-MuiButton-root,
-.css-1dxun5-MuiButtonBase-root-MuiButton-root {
+.css-1dxun5-MuiButtonBase-root-MuiButton-root,
+.css-19a5uur {
   text-transform: none !important;
 }
 
