--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,26 @@ body {
   scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
 }
 
-body::-webkit-scrollbar {
+.output_Container_scroll {
+  --sb-track-color: #232e33;
+  --sb-thumb-color: #ec3e2d;
+  --sb-size: 2px;
+  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+body::-webkit-scrollbar,
+.output_Container_scroll {
   width: var(--sb-size);
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track,
+.output_Container_scroll {
   background: var(--sb-track-color);
   border-radius: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.output_Container_scroll {
   background: var(--sb-thumb-color);
   border-radius: 10px;
 }
