--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
   --sb-track-color: #232e33;
-  --sb-thumb-color: #ec3e2d;
-  --sb-size: 2px;
-
-  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  --sb-thumb-color: #565857;
+  --sb-size: 1px;
 }
 
 body::-webkit-scrollbar {
@@ -18,10 +15,16 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
-  border-radius: 10px;
+  border-radius: 1px;
 }
 
 body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
-  border-radius: 10px;
+  border-radius: 1px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
 }
