--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ body {
   position: relative;
 }
 
+.fade-in {
+  opacity: 1;
+  transition: 0.1s ease-in-out;
+}
+
 .css-1knaqv7-MuiButtonBase-root-MuiButton-root,
 .css-1dxun5-MuiButtonBase-root-MuiButton-root,
 .css-19a5uur {
@@ -334,13 +339,14 @@ textarea {
 /* New addes */
 .folder,
 .folderStructure {
-  margin-top: 16px;
+  margin-top: 4px;
   /* background-color: lightgray; */
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 2px;
-  width: 160px;
+  gap: 1px;
+  padding: 0px !important;
+  max-width: max-content;
   cursor: pointer;
 }
 
@@ -372,7 +378,7 @@ textarea {
 }
 
 .folder > span {
-  margin: 0 5px;
+  margin: 0 2px;
 }
 
 .folder > div > button {
@@ -381,7 +387,7 @@ textarea {
 }
 
 .file {
-  margin-top: 5px;
+  margin-top: 0px;
   padding-left: 0px;
   display: flex;
   flex-direction: row;
@@ -417,9 +423,16 @@ textarea {
 }
 
 .Sidebar {
+  position: relative;
   width: 200px;
   background-color: #090b10;
   /* height: calc(100vh - 68px); */
+}
+.Sidebar-Icon {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: #000;
 }
 .Editor-Bottom {
   display: flex;
@@ -432,7 +445,7 @@ textarea {
 
 .folderStructure {
   margin-top: 0px;
-  padding-top: 10px;
+  padding-top: 2px;
   color: #fff;
 }
 
